changed the Odin recipe to a unorder list

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">Spaghetti Carbonara</a>
+        <ul>
+            <li><a href="recipes/lasagna.html">Spaghetti Carbonara</a></li>
+            <li>TBA</li>
+        </ul>
+
     </body>
 </html>
