--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="recipes/lasagna.html">Spaghetti Carbonara</a></li>
-            <li>TBA</li>
+            <li><a href="recipes/chickenkatsu.html">Chicken Katsu</a></li>
         </ul>
 
     </body>
