--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -31,5 +31,6 @@
     <li>Return cooked bacon to skillet; add cooked spaghetti. Toss to coat and heat through, adding more olive oil if it seems dry and sticks together. Add beaten eggs and cook, tossing constantly with tongs or a large fork, until eggs are barely set. Quickly add 1/2 cup Parmesan chees and toss again. Season with salt and pepper.</li>
     <li>Serve warm with chopped parsley sprinkled on top and extra Parmesan cheese at the table.</li>
    </ol>
+   <p><a href="../index.html">Return to Home</a></p>
 </body>
 </html>
