--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <img src="https://i.imgflip.com/wuhv0.jpg" width="500px" alt="fat hungry cat">
         <ul>
             <li><a href="recipes/lasagna.html">Spaghetti Carbonara</a></li>
             <li><a href="recipes/chickenkatsu.html">Chicken Katsu</a></li>
